@startuml

title __GEOGRAPHICALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geographicalOperators {
      abstract class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.GeographicalOperator {
          - filterList : FilterList
          + getOperatorExpression()
          # GeographicalOperator()
          {abstract} # geometryRefactor()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.HBaseGeographicalOperatorFactory {
          + newOperatorGeoNearestNeighbors()
          + newOperatorInGeoCircle()
          + newOperatorInGeoPolygon()
          + newOperatorInGeoRectangle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.OperatorGeoNearestNeighbors {
          - neighbors : int
          {static} + newOperatorGeoNearestNeighbors()
          # geometryRefactor()
          - OperatorGeoNearestNeighbors()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.OperatorInGeoCircle {
          {static} + newOperatorInGeoCircle()
          # geometryRefactor()
          - OperatorInGeoCircle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.OperatorInGeoPolygon {
          {static} + newOperatorInGeoPolygon()
          # geometryRefactor()
          - OperatorInGeoPolygon()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.OperatorInGeoRectangle {
          {static} + newOperatorInGeoRectangle()
          # geometryRefactor()
          - OperatorInGeoRectangle()
      }
    }
  }
  

  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.GeographicalOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.HBaseGeographicalOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.BaseGeographicalOperatorFactory
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.OperatorGeoNearestNeighbors -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.OperatorInGeoCircle -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.OperatorInGeoPolygon -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.OperatorInGeoRectangle -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.geoperators.geographicalOperators.GeographicalOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
